# SimpleMeta

./: CMakeLists.txt  SimpleMeta.sln  SimpleToDo.txt  azure-pipelines.yml
CodeGeneration/: CMakeFiles.cmake  CMakeLists.txt  FunctionGeneration.cpp  FunctionGeneration.hpp  main.cpp
DataDrivenTests/Array/: BoundTypes.json  TestDataDriven.json
DataDrivenTests/ConflictingTypes/Bool/: BoundTypes.json  TestDataDriven.json
DataDrivenTests/ConflictingTypes/Char/: BoundTypes.json  TestDataDriven.json
DataDrivenTests/ConflictingTypes/Double/: BoundTypes.json  TestDataDriven.json
DataDrivenTests/ConflictingTypes/Float/: BoundTypes.json  TestDataDriven.json
DataDrivenTests/ConflictingTypes/Int/: BoundTypes.json  TestDataDriven.json
DataDrivenTests/Simple/: BoundTypes.json  TestDataDriven.json  TestDataDriven2.json
Reflection/: Any.cpp  Any.hpp  Asserts.cpp  Asserts.hpp  Bindings.hpp  BoundType.cpp  BoundType.hpp  BoundTypeRanges.cpp  BoundTypeRanges.hpp  CMakeFiles.cmake  CMakeLists.txt  Call.cpp  Call.hpp  ConstructorsDestructors.inl  Field.cpp  Field.hpp  Function.cpp  Function.hpp  FunctionBinding.hpp  FunctionContainers.cpp  FunctionContainers.hpp  Functions.inl  GetterSetter.cpp  GetterSetter.hpp  MetaLibrary.cpp  MetaLibrary.hpp  Precompiled.hpp  ReflectionComponent.hpp  ReflectionComposition.cpp  ReflectionComposition.hpp  ReflectionLibrary.cpp  ReflectionLibrary.hpp  StandardLibraryCreation.cpp  StandardLibraryCreation.hpp  StaticTypeId.cpp  StaticTypeId.hpp  TypeId.hpp
Serialization/: Attributes.cpp  Attributes.hpp  BinaryStream.cpp  BinaryStream.hpp  CMakeFiles.cmake  CMakeLists.txt  ContainerSerializationPolicies.hpp  JsonSerializers.cpp  JsonSerializers.hpp  MetaSerialization.cpp  MetaSerialization.hpp  SerializationHelpers.hpp  SerializationPolicy.hpp  Serializer.cpp  Serializer.hpp
SimpleMeta/: Any.cpp  Any.hpp  Attributes.hpp  BinaryStream.cpp  BinaryStream.hpp  Bindings.hpp  BoundType.cpp  BoundType.hpp  CMakeFiles.cmake  CMakeLists.txt  ContainerSerializationPolicies.hpp  Function.cpp  FunctionBinding.hpp  JsonSerializers.cpp  JsonSerializers.hpp  MetaLibrary.cpp  MetaLibrary.hpp  MetaSerialization.cpp  MetaSerialization.hpp  ReflectionComponent.hpp  ReflectionComposition.cpp  ReflectionComposition.hpp  SerializationPolicy.hpp  Serializer.cpp  Serializer.hpp  SimpleMeta.vcxproj  SimpleMeta.vcxproj.filters  StaticTypeId.hpp  TestTypes.hpp  UnitTesting.cpp  UnitTesting.hpp  main.cpp
SimpleMeta/DataDriving/: DataDrivenSerializationPolicies.cpp  DataDrivenSerializationPolicies.hpp  DataDrivenTesting.cpp
SimpleMeta/TestTypes/: Actor.hpp  ActorComponents.hpp  Math.hpp  Mesh.hpp  Misc.hpp  Physics.hpp
UnitTests/: AnyTests.cpp  AnyTests.hpp  BoundTypeReflectionLibraryLifetimeTests.cpp  BoundTypeReflectionLibraryLifetimeTests.hpp  CMakeFiles.cmake  CMakeLists.txt  CallTests.cpp  CallTests.hpp  ExtensionFunctionTests.cpp  ExtensionFunctionTests.hpp  GetSetTests.cpp  GetSetTests.hpp  UnitTesting.cpp  UnitTesting.hpp
UnitTests/DataDriving/: DataDrivenSerializationPolicies.hpp  DataDrivenTesting.cpp  DataDrivenTesting.hpp  DataDrivenTypes.cpp  DataDrivenTypes.hpp
UnitTests/TestTypes/: Math.hpp  Mesh.hpp  Misc.hpp  Physics.hpp
